tests/golden/type_errors/anonymous_struct_nested_literal.cd
struct Person { name: string }
print Person { name: { value: "Ada" } };
