tests/golden/type_errors/anonymous_struct_nested_literal.err
Type error at 2:24: undefined variable `value`
  print Person { name: { value: "Ada" } };
                         ^
